objects/Lead_Team__c.object
<CustomObject>
    <description>Lead Team is used to track the Members that collaborate in the lead specially when we are in cross BU Marketing Leads</description>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <globalPicklist>Business_Unit</globalPicklist>
        <label>Captured Business Unit Interest</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Email__c</fullName>
        <description>Used for sending the notification every time a new team member is available</description>
        <label>Lead Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lead towards the user is a working</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lead Team</relationshipLabel>
        <relationshipName>Lead_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Collaborator</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who acts as team member</description>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lead_Team1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Lead Team</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LeadTeamNumber-{000000}</displayFormat>
        <label>Lead Team Member Technical Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Team</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>